<resources>
    <string name="app_name">AutoChek</string>
    <string name="home">Home</string>
    <string name="favorite">Favourite</string>
    <string name="chat">Chats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notifications</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="company_logo_image">company logo image</string>
    <string name="product_image">product image</string>
    <string name="add">Add</string>
    <string name="sold">Sold</string>
    <string name="not_available">N/A</string>
    <string name="explore">Explore</string>
    <string name="car_image">Car Image</string>
    <string name="product">Product</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="engine_type">Engine Type</string>
    <string name="mileage">Mileage</string>
    <string name="car_name">Car Name</string>
    <string name="location">Location</string>
    <string name="owner_type">Owner Type</string>
    <string name="transmission">Transmission</string>
    <string name="selling_condition">Selling Condition</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="body_type">Body Type</string>
    <string name="interior_color">Interior Color</string>
    <string name="exterior_color">Exterior Color</string>
    <string name="retry">Retry</string>
    <string name="no_results">No results 😓</string>
    <string name="price">Price</string>
    <string name="price_amount">Ksh %s/=</string>
    <string name="image_button_desc">media play and pause button</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_message">😨 Wooops %s</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="vin">Vin</string>
    <string name="vehicle_id">Vehicle Id</string>
    <string name="has_financing">Has Financing</string>
    <string name="has_warranty">Has Warranty</string>
    <string name="price_not_available">Price not available</string>
    <string name="apply_for_car_loan">Apply for Car Loan</string>
</resources>