<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/favouriteFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"
        />

    <item
        android:id="@+id/placeholder"
        android:enabled="false"
        android:title=""/>

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notification"
        />

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_message"
        android:title="@string/chat"
        />
</menu>