<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <include
        android:id="@+id/container"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <EditText
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/search_background"
        android:backgroundTint="@color/grey_light"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="5dp"
        android:hint="@string/search"
        android:imeOptions="actionSearch"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingHorizontal="12dp"
        android:singleLine="true"
        android:textColorHint="#838383"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/ib_filter"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container" />

    <ImageView
        android:id="@+id/ib_filter"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="12dp"
        android:elevation="3dp"
        android:padding="10dp"
        android:src="@drawable/ic_filter"
        android:background="@drawable/filter_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/searchView"
        app:layout_constraintTop_toTopOf="@id/searchView"
        app:layout_constraintBottom_toBottomOf="@id/searchView"
        android:contentDescription="@string/filter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_items"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        tools:listitem="@layout/item_popular_make"
        tools:itemCount="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cars"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="5dp"
        android:scrollbars="vertical"
        android:layout_marginBottom="3dp"
        tools:listitem="@layout/item_product"
        tools:itemCount="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_items"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress_bar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:lottie_rawRes="@raw/loading"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/retry"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/empty_list"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_results"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>